@@ -1,8 +1,9 @@
 #!/usr/bin/env python
 
-"""segway: DESCRIPTION
+"""segway: a way to segment the genome
 
-LONG_DESCRIPTION
+Segway is a tool for easy pattern discovery and identification in
+functional genomics data.
 """
 
 __version__ = "1.0.1"
@@ -24,7 +25,7 @@ name, short_description = doclines[0].split(": ")
 long_description = "\n".join(doclines[2:])
 
 url = "http://noble.gs.washington.edu/proj/%s/" % name.lower()
-download_url = "%s%s-%s.tar.gz" % (url, name, __version__)
+download_url = "%ssrc/%s-%s.tar.gz" % (url, name, __version__)
 
 classifiers = ["Natural Language :: English",
                "Programming Language :: Python"]
